# Titanic

./: .gitignore  README.md  Titanic_Final.ipynb  pyproject.toml
.ipynb_checkpoints/: Titanic1-checkpoint.ipynb  pyproject-checkpoint.toml  submission_pred-checkpoint.csv
Data/: X_train.csv  new_data.csv  processed_test.csv  processed_train.csv  test_df.csv
Notebook/: Titanic1.ipynb  Titanic_Base.ipynb  Titanic_Final.ipynb  Titanic_Pred.ipynb  Titanic_Train_h2o.ipynb  Titanic_predict.ipynb
Notebook/.ipynb_checkpoints/: Titanic_Base-checkpoint.ipynb  Titanic_Final-checkpoint.ipynb  Titanic_Pred-checkpoint.ipynb  Titanic_Train-checkpoint.ipynb  Titanic_Train_h2o-checkpoint.ipynb
Results/: submission.csv
src/: main.py  titanic_pred.py  titanic_train.py  titanic_train_h2o.py
src/Titanic_Base Script/: Load_and_Preprocess_data.py
src/Titanic_Pred_Script/: Load_model_and_predict.py
src/Titanic_Train_Script/: train_and_evaluate_model.py
src/h2o_model_0.86.zip/: DRF_model_python_1721727045615_138  DRF_model_python_1721727045615_139
src/pred/: load_model_and_predict.py  main_pred.py
src/train/: load_and_preprocess_data.py  main_train.py  train_and_evaluate_model.py
