[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""                          # Complétéer les infos manquantes
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.2"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
mlflow = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
